manifests/homepage/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
spec:
  finalizers:
  - kubernetes
