manifests/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-httproute
  namespace: homepage
spec:
  parentRefs:
    - kind: ListenerSet
      name: homepage
      namespace: homepage
  hostnames:
  - homepage.wcfm.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
